[package]
name = "posix-acl"
version = "0.2.0"
edition = "2018"

# Metadata
authors = ["Marti Raudsepp <marti@juffo.org>"]
description = "Simple library to interact with Posix filesystem ACLs"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/intgr/posix-acl"
repository = "https://github.com/intgr/posix-acl"
keywords = ["acl", "filesystem", "posix", "unix", "security"]
categories = ["os::unix-apis", "filesystem", "api-bindings"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
acl-sys = "1.2.0"
simple-error = "0.2.1"
libc = "0.2"
