[package]
name = "posix-acl"
version = "0.5.0"
edition = "2018"

# Metadata
authors = ["Marti Raudsepp <marti@juffo.org>"]
description = "Simple library to interact with POSIX filesystem ACLs"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/intgr/posix-acl"
repository = "https://github.com/intgr/posix-acl"
keywords = ["acl", "filesystem", "posix", "unix", "security"]
categories = ["os::unix-apis", "filesystem", "api-bindings"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
acl-sys = { path = "../acl-sys" }
libc = "0.2"

[dev-dependencies]
tempfile = "3.1.0"
