[package]
name = "posix-acl"
version = "1.2.0"
edition = "2018"
rust-version = "1.60.0"

# Metadata
authors = ["Marti Raudsepp <marti@juffo.org>"]
description = "Simple library to interact with POSIX filesystem ACLs"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/intgr/posix-acl"
repository = "https://github.com/intgr/posix-acl"
keywords = ["acl", "filesystem", "posix", "unix", "security"]
categories = ["os::unix-apis", "filesystem", "api-bindings"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
acl-sys = "1.2.2"
libc = "0.2.132"

[dev-dependencies]
tempfile = "3.10.1"
